--- a/Cargo.toml
+++ b/Cargo.toml
@@ -94,6 +94,7 @@ chrono-tz = "0.8"
 uuid = { version = "1.6", features = ["v4", "serde"] }
 config = "0.13"
 dotenv = "0.15"
+dialoguer = "0.11"
 
 # Encryption
 aes-gcm = "0.10"
