fix: update database credentials to postgres/root
- Update default database URL in all configuration files
- Set correct credentials in db_account_manager.sh
- Update test configuration to use same credentials
- Fix .env template in run.sh

This ensures consistent database access with postgres user and root password
as specified by the user.

--- a/config/default.toml
+++ b/config/default.toml
@@ -5,7 +5,7 @@ host = "127.0.0.1"
 port = 8080
 
 [database]
-url = "postgres://postgres:password@localhost/itrader"
+url = "postgres://postgres:root@localhost/itrader"
 max_connections = 10
 min_connections = 1
 
