--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,41 +2,58 @@ version: '3.8'
 
 services:
   postgres:
-    image: postgres:15
+    image: postgres:15-alpine
     environment:
-      POSTGRES_DB: itrader_db
+      POSTGRES_DB: itrader
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
+      POSTGRES_PASSWORD: root
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./migrations:/docker-entrypoint-initdb.d
     ports:
       - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   redis:
     image: redis:7-alpine
     ports:
       - "6379:6379"
+    volumes:
+      - redis_data:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
-  bot:
+  app:
     build: .
     depends_on:
-      - postgres
-      - redis
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
     environment:
-      DATABASE_URL: postgresql://postgres:password@postgres/itrader_db
+      DATABASE_URL: postgresql://postgres:root@postgres:5432/itrader
       REDIS_URL: redis://redis:6379
       RUST_LOG: info,itrader_backend=debug
-      ENCRYPTION_KEY: ${ENCRYPTION_KEY}
-      OPENROUTER_API_KEY: ${OPENROUTER_API_KEY}
-      EMAIL_ADDRESS: ${EMAIL_ADDRESS}
-      EMAIL_PASSWORD: ${EMAIL_PASSWORD}
+      JWT_SECRET: ${JWT_SECRET:-your-jwt-secret-key}
+      ADMIN_TOKEN: ${ADMIN_TOKEN:-dev-token-123}
+      OPENROUTER_API_KEY: ${OPENROUTER_API_KEY:-your-openrouter-api-key}
+      EMAIL_ADDRESS: ${EMAIL_ADDRESS:-}
+      EMAIL_PASSWORD: ${EMAIL_PASSWORD:-}
     volumes:
       - ./config:/app/config
-      - ./test_data:/app/test_data
+      - ./logs:/app/logs
+      - ./db:/app/db
+      - ./data:/app/data
     ports:
       - "8080:8080"
-      - "9090:9090"  # Metrics
+    restart: unless-stopped
 
 volumes:
   postgres_data:
+  redis_data:
